spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,10 @@ body {
   /* must be same height as the footer */
 }
 
+#main > * {
+	margin-bottom: 10px; /* ensure everything is nicely spaced. */
+}
+
 #footer {
 	border-top: 1px solid var(--color-acc);
 	padding-top: 5px;
